feat(caching): implement CachingSettings class for configurable cache durations

--- a/ShiftsLogger.API/appsettings.json
+++ b/ShiftsLogger.API/appsettings.json
@@ -8,5 +8,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ShiftsDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Shifts;Integrated Security=True;"
+  },
+  "CachingSettings": {
+    "EmployeeShiftsExpiration": {
+      "Days": 0,
+      "Hours": 0,
+      "Minutes": 5
+    },
+    "EmployeeDetailsExpiration": {
+      "Days": 0,
+      "Hours": 0,
+      "Minutes": 5
+    }
   }
 }
